--- a/css/styles.css
+++ b/css/styles.css
@@ -56,58 +56,9 @@ h1, h2, h3, h3 a{
 	color: dodgerblue;
 }
 
-.navHolder{
-	width: 100%;
-	background-color: #eee;
-	border-bottom: 2px solid dodgerblue;
-}
-
-nav{
-	max-width: 960px;
-	margin: 0 auto;
-	display: flex;
-	justify-content: space-around;
-}
-
-nav a{
-	padding: 10px;
-	font-size: 1.3rem;
-	flex-grow: 1;
-	text-align: center;
-	text-decoration: none;
-	color: dodgerblue;
-}
-
-nav a.selected{
-	font-weight: bold;
-}
-
-nav a:hover{
-	text-decoration: none;
-	background-color: dodgerblue;
-	color: white;
-}
-
-#CSSSelectArea{
-	padding: 1rem;
-	background-color: #eee;
-	position: absolute;
-	right: 0;
-	top: 0;
-	border-radius: 0 0 0 1rem;
-}
-
-#CSSSelect{
-	padding: 0.5rem;
-}
-
 .scrollOverflow::after{
 	color: dodgerblue;
 }
-
-#sizeCalc{
-			padding: 2px;
-		}
 		
 input{
 	margin: 5px 0;
@@ -116,7 +67,7 @@ input{
 button{
 	margin: 5px 0;
 	padding: 5px;
-	border: 2px solid dodgerblue;
+	border: 2px solid;
 	color: dodgerblue;
 	background-color: white;
 	border-radius: 10px;
@@ -126,16 +77,6 @@ button{
 button:hover{
 	background-color: dodgerblue;
 	color: white;
-}
-
-#stopDrawingBtn{
-	border: 2px solid red;
-	color: red;
-}
-
-#stopDrawingBtn:hover{
-	color: white;
-	background-color: red;
 }
 
 .area{
@@ -211,7 +152,7 @@ td{
 
 .smallSpacer{
 	width: 100%;
-	height: 150px;
+	height: 50px;
 }
 
 .calcHolder input{
@@ -252,3 +193,30 @@ td{
   #calcOutput.complex{
 	  border: 2px solid #45ff45;
   }
+
+button.delBtn{
+	color: red;
+}
+
+button.delBtn:hover{
+	background-color: red;
+	color: white;
+}
+
+.varRow td{
+	text-align: center;
+}
+
+.varRow td:first-child{
+	width: 10%;
+}
+
+.varRow td:last-child{
+	width: 0;
+}
+
+.varRow input{
+	padding: 0.5em;
+	width:100%;
+	border-radius: 0.5em;
+}
